tests/errors/err_error_limit.mix
// ERROR: too many errors emitted, stopping
main()
    print(aaa)
    print(bbb)
    print(ccc)
    print(ddd)
    print(eee)
    print(fff)
    print(ggg)
    print(hhh)
    print(iii)
    print(jjj)
    print(kkk)
    print(lll)
